--- a/ecommerce-admin/public/index.html
+++ b/ecommerce-admin/public/index.html
@@ -24,7 +24,8 @@
     <!-- Favicon-->
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
 
-  <title>BK Shop Admin</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+  <title>TrungHoang's shop Admin</title>
 </head>
 
 <body>
