--- a/ecommerce-client/public/index.html
+++ b/ecommerce-client/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -53,7 +54,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/responsive.css" />
     <!-- Modernizr js -->
     <script src="%PUBLIC_URL%/js/vendor/modernizr-2.8.3.min.js"></script>
-    <title>BK Shop</title>
+    <title>TrungHoang Shop</title>
   </head>
 
   <body>
