--- a/ecommerce-client/public/index.html
+++ b/ecommerce-client/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <link rel="apple-touch-icon" href="logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -53,7 +54,7 @@
     <link rel="stylesheet" href="%PUBLIC_URL%/css/responsive.css" />
     <!-- Modernizr js -->
     <script src="%PUBLIC_URL%/js/vendor/modernizr-2.8.3.min.js"></script>
-    <title>BK Shop</title>
+    <title>TrungHoang Shop</title>
   </head>
 
   <body>
